--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,21 @@
 /MinimalApp/nbproject/private/
 /MinimalApp/build/
 /MinimalApp/dist/
+/Statistica/nbproject/private/
+/MazzoCarte/nbproject/private/
+/MazzoCarte/build/
+/Mazzo/nbproject/private/
+/Mazzo/build/
+/Mazzo/dist/
+/Test_grafica/nbproject/private/
+/Test_grafica/build/
+/Test_grafica/dist/
+/Esercitazione_Grafica/nbproject/private/
+/Esercitazione_Grafica/build/
+/Esercitazione_Grafica/dist/
+/Esercitazione_Classe/nbproject/private/
+/Esercitazione_Classe/build/
+/Esercitazione_Classe/dist/
+/SlotMachine/nbproject/private/
+/SlotMachine/build/
+/SlotMachine/dist/
